--- a/.github/workflows/azure-functions-app-nodejs.yml
+++ b/.github/workflows/azure-functions-app-nodejs.yml
@@ -21,9 +21,7 @@
 name: Deploy Node.js project to Azure Function App
 
 on:
-  push:
-    branches:
-    - ["main"]
+  [push]
 
 env:
   AZURE_FUNCTIONAPP_NAME: 'azfnslots1'   # set this to your function app name on Azure
