--- a/.github/workflows/azure-functions-app-nodejs.yml
+++ b/.github/workflows/azure-functions-app-nodejs.yml
@@ -21,7 +21,10 @@
 name: Deploy Node.js project to Azure Function App
 
 on:
-  [push]
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
 
 env:
   AZURE_FUNCTIONAPP_NAME: 'azfnslots1'   # set this to your function app name on Azure
